--- a/Oboulot/WebContent/index.html
+++ b/Oboulot/WebContent/index.html
@@ -2,8 +2,8 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <!--importation de l'API google MAP Version 3-->
-<script type="text/javascript"
-	src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYBslB29hWy9uPJJgawf8Y3VX690IC9Bc" type="text/javascript"></script>
+<!-- <script type="text/javascript" src="http://maps.google.com/maps/api/key=AIzaSyBYBslB29hWy9uPJJgawf8Y3VX690IC9Bc"></script>  en http ne fonctionne pas!-->
 <script type="text/javascript" src="googleMaps.js" ></script>
 </head>
 <body onload="init();">
